changes in h1 and p

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>I am a header!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, consectetur saepe iste aliquid sit neque eum minus porro labore soluta!</p>
   </header>
 
 </body>
